--- a/Weather-App/package.json
+++ b/Weather-App/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
-    "vue": "^3.5.22"
+    "axios": "^1.13.2",
+    "vue": "^3.5.24"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
